--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.xbill</groupId>
+            <groupId>dnsjava</groupId>
             <artifactId>dnsjava</artifactId>
             <version>2.1.6</version>
         </dependency>
@@ -22,8 +22,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
@@ -34,6 +34,17 @@
                 <goals>
                     <goal>install</goal>
                 </goals>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
